--- a/index.html
+++ b/index.html
@@ -10,7 +10,23 @@
     <!-- <div id="app"></div> -->
     <header>
       <h1>Minha Mentoria</h1>
+      <nav>
+        <li>
+          <a href="">Home</a>
+        </li>
+        <li>
+          <a href="">Images</a>
+        </li>
+        <li>
+          <a href="">Contact</a>
+        </li>
+        <li>
+          <a href="">About</a>
+        </li>
+      </nav>
     </header>
+
+    <main></main>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
